kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  namespace: telehealth-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
        - name: demo-app
          image: ${DOCKERHUB_USERNAME}/inventory-client:${IMAGE_TAG}
          ports:
            - containerPort: 80
          # readinessProbe:
          #   httpGet:
          #     path: /index.html
          #     port: 80
          #   initialDelaySeconds: 5
          #   periodSeconds: 10
          #   timeoutSeconds: 3
          # livenessProbe:
          #   httpGet:
          #     path: /index.html
          #     port: 80
          #   initialDelaySeconds: 15
          #   periodSeconds: 20
